--- a/index.html/Anasayfa.html
+++ b/index.html/Anasayfa.html
@@ -13,12 +13,12 @@
   <body>
       
      <nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-top">
-         <a href="#" ><img src="images/logo1.png" style="width: 200px;" title="sblog"></a>
+         <a href="#" ><img src="images/logo1.png" style="width: 100px;" title="sblog"></a>
         <div id="" class="collapse navbar-collapse justify-content-center">
             <ul class="navbar-nav">
                 <li class="nav-item " ><a href="#" class="nav-link ml-10 text-white">Hakkımda    </a> </li>
                 <li class="nav-item " ><a href="#" class="nav-link ml-4 text-white">Eğitim Bilgilerim    </a> </li>
-                <li class="nav-item " ><a href="#" class="nav-link ml-4 text-white">Şehrim </a> </li>
+                <li class="nav-item " ><a href="Sehrim.html" class="nav-link ml-4 text-white">Şehrim </a> </li>
                 <li class="nav-item " ><a href="#" class="nav-link ml-4 text-white">Mirasımız    </a> </li>
                 <li class="nav-item " ><a href="#" class="nav-link ml-4 text-white">İlgi Alanlarım    </a> </li>
                 <li class="nav-item " ><a href="#" class="nav-link ml-4 text-white">İletişim     </a> </li>
@@ -46,3 +46,4 @@
    
   </body>
 </html>
+    
